# document-intelligence-refinery

./: .env.example  .gitignore  DOMAIN_NOTES.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  test_phase4.py
.github/workflows/: ci.yml
.refinery/: extraction_ledger.jsonl
.refinery/extractions/: 97c0a7f830cc3125.json
.refinery/profiles/: 00c9e315653296cf.json  10d327f1c6a22f00.json  1346ae8c8c9635a2.json  1e1446aa6dd5d673.json  2408519fe12fc3df.json  3ac59a5f689686f7.json  4b27a1ab5dbf2896.json  7df9581e83cfbe40.json  8f082794c3e5f568.json  cd81b4882e979f8e.json  f3d0c7253e92c1bf.json  f91c557cedd59cbd.json
analysis/: compare_docling.py  phase0_analysis.py
analysis/output/: comparison.csv  comparison_table.md  docling_comparison.json  phase0_analysis.json
rubric/: extraction_rules.yaml  extraction_rules.yaml
scripts/: demo_amharic.py  generate_pageindices.py  generate_qa_examples.py
src/: __init__.py  cli.py
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/config/: settings.py
src/models/: __init__.py  chunking.py  document.py  enums.py  extraction.py  provenance.py
src/queries/: audit_mode.py
src/strategies/: base.py  fast_text.py  init.py  layout.py  vision.py
src/utils/: confidence.py  domain.py  fact_extractor.py  hashing.py  layout.py  pdf_analyzer.py  sqlite_store.py  strategy.py  vector_store.py
tests/: test_audit.py  test_chunking.py  test_phase2.py  test_query.py  test_router.py  test_triage.py
