
[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Enterprise-grade document intelligence pipeline with multi-strategy extraction, semantic chunking, and provenance tracking"
readme = "README.md"
authors = [
    {name = "Tsegay", email = "tsegayassefa27@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.12.5",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "langgraph>=1.0.10",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sqlalchemy>=2.0.0",
    "tiktoken>=0.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "opencv-python>=4.9.0",
    "docling",
    "openai>=2.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "networkx>=3.0",
]

[project.scripts]
refinery-triage = "src.cli:triage"
refinery-extract = "src.cli:extract"
refinery-chunk = "src.cli:chunk"
refinery-index = "src.cli:index"
refinery-query = "src.cli:query"
refinery-audit = "src.cli:audit"
refinery-demo = "src.cli:demo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
]