[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "Enterprise-grade document intelligence pipeline with multi-strategy extraction, semantic chunking, and provenance tracking"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Tsegay", email = "tsegayassefa27@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.12.5",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "python-magic>=0.4.27",
    "langgraph>=1.0.10",
    "langchain-core>=1.2.16",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "tenacity>=9.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]

extraction = [
    "docling",  # For Strategy B
    "opencv-python>=4.9.0",
]

vision = [
    "openai>=1.0.0",  # For OpenRouter
]

storage = [
    "chromadb>=0.5.0",
    "faiss-cpu>=1.8.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
]

all = [
    "document-intelligence-refinery[dev,extraction,vision,storage]",
]